# embedded_interpreter_c

./: CMakeLists.txt  embedded_interpreter.c  embedded_interpreter.h  library.c  library.h  simple_errors.c  simple_errors.h  test_main.c
x86_64-w64-mingw32/: Makefile  config.status  fficonfig.h  libffi.la  libtool
x86_64-w64-mingw32/.libs/: libffi.lai
x86_64-w64-mingw32/include/: Makefile
x86_64-w64-mingw32/man/: Makefile
x86_64-w64-mingw32/src/.deps/: closures.Plo  java_raw_api.Plo  prep_cif.Plo  raw_api.Plo  types.Plo
x86_64-w64-mingw32/src/x86/: win64.lo
x86_64-w64-mingw32/src/x86/.deps/: ffi.Plo  win64.Plo
x86_64-w64-mingw32/testsuite/: Makefile
